--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -266,6 +266,7 @@ input[type="radio"] {
       }
 
       td {
+        overflow:hidden;
         font-size: 14px;
         &:nth-child(3) {
           width: 100%;
